--- a/css/styles.scss
+++ b/css/styles.scss
@@ -40,7 +40,7 @@ section {
 	bottom: 10px;
 }
 .back {
-	background-image: url('/projects/church-site/img/home.jpg');
+	background-image: url('/img/home.jpg');
 	background-size: cover;
 	background-position: bottom;
 	background-repeat: no-repeat;
@@ -100,7 +100,7 @@ i {
 	flex-direction: column;
 }
 #back-missa {
-	background-image: url("/projects/church-site/img/missa.png");
+	background-image: url("/img/missa.png");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -116,14 +116,14 @@ i {
 	color: white;
 }
 #bg-confi {
-	background-image: url('/projects/church-site/img/confessionario.png');
+	background-image: url('/img/confessionario.png');
 	background-position: center;
 	background-size: cover;
 	height: 400px;
 	width: 50%;
 }
 #terco {
-	background-image: url('/projects/church-site/img/terco.png');
+	background-image: url('/img/terco.png');
 	background-size: cover;
 	background-position: center;
 	width: 50%;
