--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ section {
 }
 
 .back {
-  background-image: url("/projects/church-site/img/home.jpg");
+  background-image: url("/img/home.jpg");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
@@ -147,7 +147,7 @@ i {
 }
 
 #back-missa {
-  background-image: url("/projects/church-site/img/missa.png");
+  background-image: url("/img/missa.png");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -169,7 +169,7 @@ i {
 }
 
 #bg-confi {
-  background-image: url("/projects/church-site/img/confessionario.png");
+  background-image: url("/img/confessionario.png");
   background-position: center;
   background-size: cover;
   height: 400px;
@@ -177,7 +177,7 @@ i {
 }
 
 #terco {
-  background-image: url("/projects/church-site/img/terco.png");
+  background-image: url("/img/terco.png");
   background-size: cover;
   background-position: center;
   width: 50%;
