--- a/css/styles.scss
+++ b/css/styles.scss
@@ -40,7 +40,7 @@ section {
 	bottom: 10px;
 }
 .back {
-	background-image: url(/img/home.jpg);
+	background-image: url('../img/home.jpg');
 	background-size: cover;
 	background-position: bottom;
 	background-repeat: no-repeat;
